--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hocuspocus/provider": "^2.0.1",
+    "@tiptap/extension-character-count": "^2.0.1",
+    "@tiptap/extension-collaboration": "^2.0.1",
+    "@tiptap/extension-collaboration-cursor": "^2.0.1",
+    "@tiptap/extension-color": "^2.0.1",
+    "@tiptap/extension-highlight": "^2.0.1",
+    "@tiptap/extension-task-item": "^2.0.1",
+    "@tiptap/extension-task-list": "^2.0.1",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.60.0"
   }
 }
